--- a/MiniPanelTest/app/src/main/res/layout/activity_main.xml
+++ b/MiniPanelTest/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="BltBit" />
-
+            <Button
+                android:id="@+id/buttonFontSize"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="FontSize" />
         </LinearLayout>
 
         <LinearLayout
